cmake_minimum_required(VERSION 2.8.4)
project(openpana_coap)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    src/cantcoap-master/examples/dtls/dtls_client.c
    src/cantcoap-master/examples/dtls/dtls_server.c
    src/cantcoap-master/examples/plain/client.cpp
    src/cantcoap-master/examples/plain/server.cpp
    src/cantcoap-master/cantcoap.cpp
    src/cantcoap-master/cantcoap.h
    src/cantcoap-master/dbg.h
    src/cantcoap-master/nethelper.c
    src/cantcoap-master/nethelper.h
    src/cantcoap-master/test.cpp
    src/cantcoap-master/uthash.h
    src/cpp_sources/session.cpp
    src/cpp_sources/session.h
    src/cpp_sources/session_test.cpp
    src/libeapstack/eap_auth_interface.c
    src/libeapstack/eap_auth_interface.h
    src/libeapstack/eap_peer_interface.c
    src/libeapstack/eap_peer_interface.h
    src/panatiki/aes.c
    src/panatiki/aes.h
    src/panatiki/eap-peer.c
    src/panatiki/eap-peer.h
    src/panatiki/eap-psk.c
    src/panatiki/eap-psk.h
    src/panatiki/eax.c
    src/panatiki/eax.h
    src/panatiki/include.h
    src/state_machines/coap_eap_session.c
    src/state_machines/coap_eap_session.h
    src/state_machines/coap_eap_statemachine.c
    src/state_machines/coap_eap_statemachine.h
    src/state_machines/paamachine.c
    src/state_machines/paamachine.h
    src/state_machines/pacmachine.c
    src/state_machines/pacmachine.h
    src/state_machines/session.c
    src/state_machines/session.h
    src/state_machines/sessionclient.h
    src/state_machines/sessionserver.h
    src/state_machines/statemachine.c
    src/state_machines/statemachine.h
    src/state_machines/statemachinecpp.c
    src/state_machines/statemachinecpp.h
    src/wpa_supplicant/src/ap/accounting.c
    src/wpa_supplicant/src/ap/accounting.h
    src/wpa_supplicant/src/ap/ap_config.c
    src/wpa_supplicant/src/ap/ap_config.h
    src/wpa_supplicant/src/ap/ap_drv_ops.c
    src/wpa_supplicant/src/ap/ap_drv_ops.h
    src/wpa_supplicant/src/ap/ap_list.c
    src/wpa_supplicant/src/ap/ap_list.h
    src/wpa_supplicant/src/ap/ap_mlme.c
    src/wpa_supplicant/src/ap/ap_mlme.h
    src/wpa_supplicant/src/ap/authsrv.c
    src/wpa_supplicant/src/ap/authsrv.h
    src/wpa_supplicant/src/ap/beacon.c
    src/wpa_supplicant/src/ap/beacon.h
    src/wpa_supplicant/src/ap/ctrl_iface_ap.c
    src/wpa_supplicant/src/ap/ctrl_iface_ap.h
    src/wpa_supplicant/src/ap/drv_callbacks.c
    src/wpa_supplicant/src/ap/hostapd.c
    src/wpa_supplicant/src/ap/hostapd.h
    src/wpa_supplicant/src/ap/hw_features.c
    src/wpa_supplicant/src/ap/hw_features.h
    src/wpa_supplicant/src/ap/iapp.c
    src/wpa_supplicant/src/ap/iapp.h
    src/wpa_supplicant/src/ap/ieee802_11.c
    src/wpa_supplicant/src/ap/ieee802_11.h
    src/wpa_supplicant/src/ap/ieee802_11_auth.c
    src/wpa_supplicant/src/ap/ieee802_11_auth.h
    src/wpa_supplicant/src/ap/ieee802_11_ht.c
    src/wpa_supplicant/src/ap/ieee802_1x.c
    src/wpa_supplicant/src/ap/ieee802_1x.h
    src/wpa_supplicant/src/ap/peerkey_auth.c
    src/wpa_supplicant/src/ap/pmksa_cache_auth.c
    src/wpa_supplicant/src/ap/pmksa_cache_auth.h
    src/wpa_supplicant/src/ap/preauth_auth.c
    src/wpa_supplicant/src/ap/preauth_auth.h
    src/wpa_supplicant/src/ap/sta_info.c
    src/wpa_supplicant/src/ap/sta_info.h
    src/wpa_supplicant/src/ap/tkip_countermeasures.c
    src/wpa_supplicant/src/ap/tkip_countermeasures.h
    src/wpa_supplicant/src/ap/utils.c
    src/wpa_supplicant/src/ap/vlan_init.c
    src/wpa_supplicant/src/ap/vlan_init.h
    src/wpa_supplicant/src/ap/wmm.c
    src/wpa_supplicant/src/ap/wmm.h
    src/wpa_supplicant/src/ap/wpa_auth.c
    src/wpa_supplicant/src/ap/wpa_auth.h
    src/wpa_supplicant/src/ap/wpa_auth_ft.c
    src/wpa_supplicant/src/ap/wpa_auth_glue.c
    src/wpa_supplicant/src/ap/wpa_auth_glue.h
    src/wpa_supplicant/src/ap/wpa_auth_i.h
    src/wpa_supplicant/src/ap/wpa_auth_ie.c
    src/wpa_supplicant/src/ap/wpa_auth_ie.h
    src/wpa_supplicant/src/ap/wps_hostapd.c
    src/wpa_supplicant/src/ap/wps_hostapd.h
    src/wpa_supplicant/src/common/defs.h
    src/wpa_supplicant/src/common/eapol_common.h
    src/wpa_supplicant/src/common/ieee802_11_common.c
    src/wpa_supplicant/src/common/ieee802_11_common.h
    src/wpa_supplicant/src/common/ieee802_11_defs.h
    src/wpa_supplicant/src/common/privsep_commands.h
    src/wpa_supplicant/src/common/version.h
    src/wpa_supplicant/src/common/wpa_common.c
    src/wpa_supplicant/src/common/wpa_common.h
    src/wpa_supplicant/src/common/wpa_ctrl.c
    src/wpa_supplicant/src/common/wpa_ctrl.h
    src/wpa_supplicant/src/crypto/aes-cbc.c
    src/wpa_supplicant/src/crypto/aes-ctr.c
    src/wpa_supplicant/src/crypto/aes-eax.c
    src/wpa_supplicant/src/crypto/aes-encblock.c
    src/wpa_supplicant/src/crypto/aes-internal-dec.c
    src/wpa_supplicant/src/crypto/aes-internal-enc.c
    src/wpa_supplicant/src/crypto/aes-internal.c
    src/wpa_supplicant/src/crypto/aes-omac1.c
    src/wpa_supplicant/src/crypto/aes-unwrap.c
    src/wpa_supplicant/src/crypto/aes-wrap.c
    src/wpa_supplicant/src/crypto/aes.h
    src/wpa_supplicant/src/crypto/aes_i.h
    src/wpa_supplicant/src/crypto/aes_wrap.h
    src/wpa_supplicant/src/crypto/crypto.h
    src/wpa_supplicant/src/crypto/crypto_cryptoapi.c
    src/wpa_supplicant/src/crypto/crypto_gnutls.c
    src/wpa_supplicant/src/crypto/crypto_internal-cipher.c
    src/wpa_supplicant/src/crypto/crypto_internal-modexp.c
    src/wpa_supplicant/src/crypto/crypto_internal-rsa.c
    src/wpa_supplicant/src/crypto/crypto_internal.c
    src/wpa_supplicant/src/crypto/crypto_libtomcrypt.c
    src/wpa_supplicant/src/crypto/crypto_none.c
    src/wpa_supplicant/src/crypto/crypto_nss.c
    src/wpa_supplicant/src/crypto/crypto_openssl.c
    src/wpa_supplicant/src/crypto/des-internal.c
    src/wpa_supplicant/src/crypto/des_i.h
    src/wpa_supplicant/src/crypto/dh_group5.c
    src/wpa_supplicant/src/crypto/dh_group5.h
    src/wpa_supplicant/src/crypto/dh_groups.c
    src/wpa_supplicant/src/crypto/dh_groups.h
    src/wpa_supplicant/src/crypto/fips_prf_cryptoapi.c
    src/wpa_supplicant/src/crypto/fips_prf_gnutls.c
    src/wpa_supplicant/src/crypto/fips_prf_internal.c
    src/wpa_supplicant/src/crypto/fips_prf_nss.c
    src/wpa_supplicant/src/crypto/fips_prf_openssl.c
    src/wpa_supplicant/src/crypto/md4-internal.c
    src/wpa_supplicant/src/crypto/md5-internal.c
    src/wpa_supplicant/src/crypto/md5-non-fips.c
    src/wpa_supplicant/src/crypto/md5.c
    src/wpa_supplicant/src/crypto/md5.h
    src/wpa_supplicant/src/crypto/md5_i.h
    src/wpa_supplicant/src/crypto/milenage.c
    src/wpa_supplicant/src/crypto/milenage.h
    src/wpa_supplicant/src/crypto/ms_funcs.c
    src/wpa_supplicant/src/crypto/ms_funcs.h
    src/wpa_supplicant/src/crypto/rc4.c
    src/wpa_supplicant/src/crypto/sha1-internal.c
    src/wpa_supplicant/src/crypto/sha1-pbkdf2.c
    src/wpa_supplicant/src/crypto/sha1-tlsprf.c
    src/wpa_supplicant/src/crypto/sha1-tprf.c
    src/wpa_supplicant/src/crypto/sha1.c
    src/wpa_supplicant/src/crypto/sha1.h
    src/wpa_supplicant/src/crypto/sha1_i.h
    src/wpa_supplicant/src/crypto/sha256-internal.c
    src/wpa_supplicant/src/crypto/sha256.c
    src/wpa_supplicant/src/crypto/sha256.h
    src/wpa_supplicant/src/crypto/tls.h
    src/wpa_supplicant/src/crypto/tls_gnutls.c
    src/wpa_supplicant/src/crypto/tls_internal.c
    src/wpa_supplicant/src/crypto/tls_none.c
    src/wpa_supplicant/src/crypto/tls_nss.c
    src/wpa_supplicant/src/crypto/tls_openssl.c
    src/wpa_supplicant/src/crypto/tls_schannel.c
    src/wpa_supplicant/src/drivers/Apple80211.h
    src/wpa_supplicant/src/drivers/driver.h
    src/wpa_supplicant/src/drivers/driver_atheros.c
    src/wpa_supplicant/src/drivers/driver_atmel.c
    src/wpa_supplicant/src/drivers/driver_broadcom.c
    src/wpa_supplicant/src/drivers/driver_bsd.c
    src/wpa_supplicant/src/drivers/driver_hostap.c
    src/wpa_supplicant/src/drivers/driver_hostap.h
    src/wpa_supplicant/src/drivers/driver_ipw.c
    src/wpa_supplicant/src/drivers/driver_madwifi.c
    src/wpa_supplicant/src/drivers/driver_ndis.c
    src/wpa_supplicant/src/drivers/driver_ndis.h
    src/wpa_supplicant/src/drivers/driver_ndis_.c
    src/wpa_supplicant/src/drivers/driver_ndiswrapper.c
    src/wpa_supplicant/src/drivers/driver_nl80211.c
    src/wpa_supplicant/src/drivers/driver_none.c
    src/wpa_supplicant/src/drivers/driver_privsep.c
    src/wpa_supplicant/src/drivers/driver_ralink.c
    src/wpa_supplicant/src/drivers/driver_ralink.h
    src/wpa_supplicant/src/drivers/driver_roboswitch.c
    src/wpa_supplicant/src/drivers/driver_test.c
    src/wpa_supplicant/src/drivers/driver_wext.c
    src/wpa_supplicant/src/drivers/driver_wext.h
    src/wpa_supplicant/src/drivers/driver_wired.c
    src/wpa_supplicant/src/drivers/drivers.c
    src/wpa_supplicant/src/drivers/linux_ioctl.c
    src/wpa_supplicant/src/drivers/linux_ioctl.h
    src/wpa_supplicant/src/drivers/MobileApple80211.c
    src/wpa_supplicant/src/drivers/MobileApple80211.h
    src/wpa_supplicant/src/drivers/ndis_events.c
    src/wpa_supplicant/src/drivers/netlink.c
    src/wpa_supplicant/src/drivers/netlink.h
    src/wpa_supplicant/src/drivers/nl80211_copy.h
    src/wpa_supplicant/src/drivers/priv_netlink.h
    src/wpa_supplicant/src/drivers/wireless_copy.h
    src/wpa_supplicant/src/eap_common/chap.c
    src/wpa_supplicant/src/eap_common/chap.h
    src/wpa_supplicant/src/eap_common/eap_common.c
    src/wpa_supplicant/src/eap_common/eap_common.h
    src/wpa_supplicant/src/eap_common/eap_defs.h
    src/wpa_supplicant/src/eap_common/eap_fast_common.c
    src/wpa_supplicant/src/eap_common/eap_fast_common.h
    src/wpa_supplicant/src/eap_common/eap_gpsk_common.c
    src/wpa_supplicant/src/eap_common/eap_gpsk_common.h
    src/wpa_supplicant/src/eap_common/eap_ikev2_common.c
    src/wpa_supplicant/src/eap_common/eap_ikev2_common.h
    src/wpa_supplicant/src/eap_common/eap_pax_common.c
    src/wpa_supplicant/src/eap_common/eap_pax_common.h
    src/wpa_supplicant/src/eap_common/eap_peap_common.c
    src/wpa_supplicant/src/eap_common/eap_peap_common.h
    src/wpa_supplicant/src/eap_common/eap_psk_common.c
    src/wpa_supplicant/src/eap_common/eap_psk_common.h
    src/wpa_supplicant/src/eap_common/eap_sake_common.c
    src/wpa_supplicant/src/eap_common/eap_sake_common.h
    src/wpa_supplicant/src/eap_common/eap_sim_common.c
    src/wpa_supplicant/src/eap_common/eap_sim_common.h
    src/wpa_supplicant/src/eap_common/eap_tlv_common.h
    src/wpa_supplicant/src/eap_common/eap_ttls.h
    src/wpa_supplicant/src/eap_common/eap_wsc_common.c
    src/wpa_supplicant/src/eap_common/eap_wsc_common.h
    src/wpa_supplicant/src/eap_common/ikev2_common.c
    src/wpa_supplicant/src/eap_common/ikev2_common.h
    src/wpa_supplicant/src/eap_peer/eap.c
    src/wpa_supplicant/src/eap_peer/eap.h
    src/wpa_supplicant/src/eap_peer/eap_aka.c
    src/wpa_supplicant/src/eap_peer/eap_config.h
    src/wpa_supplicant/src/eap_peer/eap_fast.c
    src/wpa_supplicant/src/eap_peer/eap_fast_pac.c
    src/wpa_supplicant/src/eap_peer/eap_fast_pac.h
    src/wpa_supplicant/src/eap_peer/eap_gpsk.c
    src/wpa_supplicant/src/eap_peer/eap_gtc.c
    src/wpa_supplicant/src/eap_peer/eap_i.h
    src/wpa_supplicant/src/eap_peer/eap_ikev2.c
    src/wpa_supplicant/src/eap_peer/eap_leap.c
    src/wpa_supplicant/src/eap_peer/eap_md5.c
    src/wpa_supplicant/src/eap_peer/eap_methods.c
    src/wpa_supplicant/src/eap_peer/eap_methods.h
    src/wpa_supplicant/src/eap_peer/eap_mschapv2.c
    src/wpa_supplicant/src/eap_peer/eap_otp.c
    src/wpa_supplicant/src/eap_peer/eap_pax.c
    src/wpa_supplicant/src/eap_peer/eap_peap.c
    src/wpa_supplicant/src/eap_peer/eap_psk.c
    src/wpa_supplicant/src/eap_peer/eap_sake.c
    src/wpa_supplicant/src/eap_peer/eap_sim.c
    src/wpa_supplicant/src/eap_peer/eap_tls.c
    src/wpa_supplicant/src/eap_peer/eap_tls_common.c
    src/wpa_supplicant/src/eap_peer/eap_tls_common.h
    src/wpa_supplicant/src/eap_peer/eap_tnc.c
    src/wpa_supplicant/src/eap_peer/eap_ttls.c
    src/wpa_supplicant/src/eap_peer/eap_vendor_test.c
    src/wpa_supplicant/src/eap_peer/eap_wsc.c
    src/wpa_supplicant/src/eap_peer/ikev2.c
    src/wpa_supplicant/src/eap_peer/ikev2.h
    src/wpa_supplicant/src/eap_peer/mschapv2.c
    src/wpa_supplicant/src/eap_peer/mschapv2.h
    src/wpa_supplicant/src/eap_peer/tncc.c
    src/wpa_supplicant/src/eap_peer/tncc.h
    src/wpa_supplicant/src/eap_server/eap.h
    src/wpa_supplicant/src/eap_server/eap_i.h
    src/wpa_supplicant/src/eap_server/eap_methods.h
    src/wpa_supplicant/src/eap_server/eap_server.c
    src/wpa_supplicant/src/eap_server/eap_server_aka.c
    src/wpa_supplicant/src/eap_server/eap_server_fast.c
    src/wpa_supplicant/src/eap_server/eap_server_gpsk.c
    src/wpa_supplicant/src/eap_server/eap_server_gtc.c
    src/wpa_supplicant/src/eap_server/eap_server_identity.c
    src/wpa_supplicant/src/eap_server/eap_server_ikev2.c
    src/wpa_supplicant/src/eap_server/eap_server_md5.c
    src/wpa_supplicant/src/eap_server/eap_server_methods.c
    src/wpa_supplicant/src/eap_server/eap_server_mschapv2.c
    src/wpa_supplicant/src/eap_server/eap_server_pax.c
    src/wpa_supplicant/src/eap_server/eap_server_peap.c
    src/wpa_supplicant/src/eap_server/eap_server_psk.c
    src/wpa_supplicant/src/eap_server/eap_server_sake.c
    src/wpa_supplicant/src/eap_server/eap_server_sim.c
    src/wpa_supplicant/src/eap_server/eap_server_tls.c
    src/wpa_supplicant/src/eap_server/eap_server_tls_common.c
    src/wpa_supplicant/src/eap_server/eap_server_tnc.c
    src/wpa_supplicant/src/eap_server/eap_server_ttls.c
    src/wpa_supplicant/src/eap_server/eap_server_vendor_test.c
    src/wpa_supplicant/src/eap_server/eap_server_wsc.c
    src/wpa_supplicant/src/eap_server/eap_sim_db.c
    src/wpa_supplicant/src/eap_server/eap_sim_db.h
    src/wpa_supplicant/src/eap_server/eap_tls_common.h
    src/wpa_supplicant/src/eap_server/ikev2.c
    src/wpa_supplicant/src/eap_server/ikev2.h
    src/wpa_supplicant/src/eap_server/tncs.c
    src/wpa_supplicant/src/eap_server/tncs.h
    src/wpa_supplicant/src/eapol_auth/eapol_auth_dump.c
    src/wpa_supplicant/src/eapol_auth/eapol_auth_sm.c
    src/wpa_supplicant/src/eapol_auth/eapol_auth_sm.h
    src/wpa_supplicant/src/eapol_auth/eapol_auth_sm_i.h
    src/wpa_supplicant/src/eapol_supp/eapol_supp_sm.c
    src/wpa_supplicant/src/eapol_supp/eapol_supp_sm.h
    src/wpa_supplicant/src/l2_packet/l2_packet.h
    src/wpa_supplicant/src/l2_packet/l2_packet_freebsd.c
    src/wpa_supplicant/src/l2_packet/l2_packet_linux.c
    src/wpa_supplicant/src/l2_packet/l2_packet_ndis.c
    src/wpa_supplicant/src/l2_packet/l2_packet_none.c
    src/wpa_supplicant/src/l2_packet/l2_packet_pcap.c
    src/wpa_supplicant/src/l2_packet/l2_packet_privsep.c
    src/wpa_supplicant/src/l2_packet/l2_packet_winpcap.c
    src/wpa_supplicant/src/radius/radius.c
    src/wpa_supplicant/src/radius/radius.h
    src/wpa_supplicant/src/radius/radius_client.c
    src/wpa_supplicant/src/radius/radius_client.h
    src/wpa_supplicant/src/radius/radius_server.c
    src/wpa_supplicant/src/radius/radius_server.h
    src/wpa_supplicant/src/rsn_supp/peerkey.c
    src/wpa_supplicant/src/rsn_supp/peerkey.h
    src/wpa_supplicant/src/rsn_supp/pmksa_cache.c
    src/wpa_supplicant/src/rsn_supp/pmksa_cache.h
    src/wpa_supplicant/src/rsn_supp/preauth.c
    src/wpa_supplicant/src/rsn_supp/preauth.h
    src/wpa_supplicant/src/rsn_supp/wpa.c
    src/wpa_supplicant/src/rsn_supp/wpa.h
    src/wpa_supplicant/src/rsn_supp/wpa_ft.c
    src/wpa_supplicant/src/rsn_supp/wpa_i.h
    src/wpa_supplicant/src/rsn_supp/wpa_ie.c
    src/wpa_supplicant/src/rsn_supp/wpa_ie.h
    src/wpa_supplicant/src/tls/asn1.c
    src/wpa_supplicant/src/tls/asn1.h
    src/wpa_supplicant/src/tls/bignum.c
    src/wpa_supplicant/src/tls/bignum.h
    src/wpa_supplicant/src/tls/libtommath.c
    src/wpa_supplicant/src/tls/pkcs1.c
    src/wpa_supplicant/src/tls/pkcs1.h
    src/wpa_supplicant/src/tls/pkcs5.c
    src/wpa_supplicant/src/tls/pkcs5.h
    src/wpa_supplicant/src/tls/pkcs8.c
    src/wpa_supplicant/src/tls/pkcs8.h
    src/wpa_supplicant/src/tls/rsa.c
    src/wpa_supplicant/src/tls/rsa.h
    src/wpa_supplicant/src/tls/tlsv1_client.c
    src/wpa_supplicant/src/tls/tlsv1_client.h
    src/wpa_supplicant/src/tls/tlsv1_client_i.h
    src/wpa_supplicant/src/tls/tlsv1_client_read.c
    src/wpa_supplicant/src/tls/tlsv1_client_write.c
    src/wpa_supplicant/src/tls/tlsv1_common.c
    src/wpa_supplicant/src/tls/tlsv1_common.h
    src/wpa_supplicant/src/tls/tlsv1_cred.c
    src/wpa_supplicant/src/tls/tlsv1_cred.h
    src/wpa_supplicant/src/tls/tlsv1_record.c
    src/wpa_supplicant/src/tls/tlsv1_record.h
    src/wpa_supplicant/src/tls/tlsv1_server.c
    src/wpa_supplicant/src/tls/tlsv1_server.h
    src/wpa_supplicant/src/tls/tlsv1_server_i.h
    src/wpa_supplicant/src/tls/tlsv1_server_read.c
    src/wpa_supplicant/src/tls/tlsv1_server_write.c
    src/wpa_supplicant/src/tls/x509v3.c
    src/wpa_supplicant/src/tls/x509v3.h
    src/wpa_supplicant/src/utils/base64.c
    src/wpa_supplicant/src/utils/base64.h
    src/wpa_supplicant/src/utils/build_config.h
    src/wpa_supplicant/src/utils/common.c
    src/wpa_supplicant/src/utils/common.h
    src/wpa_supplicant/src/utils/eloop.c
    src/wpa_supplicant/src/utils/eloop.h
    src/wpa_supplicant/src/utils/eloop_none.c
    src/wpa_supplicant/src/utils/eloop_win.c
    src/wpa_supplicant/src/utils/includes.h
    src/wpa_supplicant/src/utils/ip_addr.c
    src/wpa_supplicant/src/utils/ip_addr.h
    src/wpa_supplicant/src/utils/list.h
    src/wpa_supplicant/src/utils/os.h
    src/wpa_supplicant/src/utils/os_internal.c
    src/wpa_supplicant/src/utils/os_none.c
    src/wpa_supplicant/src/utils/os_unix.c
    src/wpa_supplicant/src/utils/os_win32.c
    src/wpa_supplicant/src/utils/pcsc_funcs.c
    src/wpa_supplicant/src/utils/pcsc_funcs.h
    src/wpa_supplicant/src/utils/radiotap.c
    src/wpa_supplicant/src/utils/radiotap.h
    src/wpa_supplicant/src/utils/radiotap_iter.h
    src/wpa_supplicant/src/utils/state_machine.h
    src/wpa_supplicant/src/utils/trace.c
    src/wpa_supplicant/src/utils/trace.h
    src/wpa_supplicant/src/utils/uuid.c
    src/wpa_supplicant/src/utils/uuid.h
    src/wpa_supplicant/src/utils/wpa_debug.c
    src/wpa_supplicant/src/utils/wpa_debug.h
    src/wpa_supplicant/src/utils/wpabuf.c
    src/wpa_supplicant/src/utils/wpabuf.h
    src/wpa_supplicant/src/wps/http.h
    src/wpa_supplicant/src/wps/http_client.c
    src/wpa_supplicant/src/wps/http_client.h
    src/wpa_supplicant/src/wps/http_server.c
    src/wpa_supplicant/src/wps/http_server.h
    src/wpa_supplicant/src/wps/httpread.c
    src/wpa_supplicant/src/wps/httpread.h
    src/wpa_supplicant/src/wps/ndef.c
    src/wpa_supplicant/src/wps/upnp_xml.c
    src/wpa_supplicant/src/wps/upnp_xml.h
    src/wpa_supplicant/src/wps/wps.c
    src/wpa_supplicant/src/wps/wps.h
    src/wpa_supplicant/src/wps/wps_attr_build.c
    src/wpa_supplicant/src/wps/wps_attr_parse.c
    src/wpa_supplicant/src/wps/wps_attr_process.c
    src/wpa_supplicant/src/wps/wps_common.c
    src/wpa_supplicant/src/wps/wps_defs.h
    src/wpa_supplicant/src/wps/wps_dev_attr.c
    src/wpa_supplicant/src/wps/wps_dev_attr.h
    src/wpa_supplicant/src/wps/wps_enrollee.c
    src/wpa_supplicant/src/wps/wps_er.c
    src/wpa_supplicant/src/wps/wps_er.h
    src/wpa_supplicant/src/wps/wps_er_ssdp.c
    src/wpa_supplicant/src/wps/wps_i.h
    src/wpa_supplicant/src/wps/wps_nfc.c
    src/wpa_supplicant/src/wps/wps_nfc_pn531.c
    src/wpa_supplicant/src/wps/wps_registrar.c
    src/wpa_supplicant/src/wps/wps_ufd.c
    src/wpa_supplicant/src/wps/wps_upnp.c
    src/wpa_supplicant/src/wps/wps_upnp.h
    src/wpa_supplicant/src/wps/wps_upnp_ap.c
    src/wpa_supplicant/src/wps/wps_upnp_event.c
    src/wpa_supplicant/src/wps/wps_upnp_i.h
    src/wpa_supplicant/src/wps/wps_upnp_ssdp.c
    src/wpa_supplicant/src/wps/wps_upnp_web.c
    src/wpa_supplicant/wpa_supplicant/dbus/dbus_common.c
    src/wpa_supplicant/wpa_supplicant/dbus/dbus_common.h
    src/wpa_supplicant/wpa_supplicant/dbus/dbus_common_i.h
    src/wpa_supplicant/wpa_supplicant/dbus/dbus_dict_helpers.c
    src/wpa_supplicant/wpa_supplicant/dbus/dbus_dict_helpers.h
    src/wpa_supplicant/wpa_supplicant/dbus/dbus_new.c
    src/wpa_supplicant/wpa_supplicant/dbus/dbus_new.h
    src/wpa_supplicant/wpa_supplicant/dbus/dbus_new_handlers.c
    src/wpa_supplicant/wpa_supplicant/dbus/dbus_new_handlers.h
    src/wpa_supplicant/wpa_supplicant/dbus/dbus_new_handlers_wps.c
    src/wpa_supplicant/wpa_supplicant/dbus/dbus_new_helpers.c
    src/wpa_supplicant/wpa_supplicant/dbus/dbus_new_helpers.h
    src/wpa_supplicant/wpa_supplicant/dbus/dbus_new_introspect.c
    src/wpa_supplicant/wpa_supplicant/dbus/dbus_old.c
    src/wpa_supplicant/wpa_supplicant/dbus/dbus_old.h
    src/wpa_supplicant/wpa_supplicant/dbus/dbus_old_handlers.c
    src/wpa_supplicant/wpa_supplicant/dbus/dbus_old_handlers.h
    src/wpa_supplicant/wpa_supplicant/dbus/dbus_old_handlers_wps.c
    src/wpa_supplicant/wpa_supplicant/tests/link_test.c
    src/wpa_supplicant/wpa_supplicant/tests/test_eap_sim_common.c
    src/wpa_supplicant/wpa_supplicant/tests/test_wpa.c
    src/wpa_supplicant/wpa_supplicant/wpa_gui/eventhistory.ui.h
    src/wpa_supplicant/wpa_supplicant/wpa_gui/main.cpp
    src/wpa_supplicant/wpa_supplicant/wpa_gui/networkconfig.ui.h
    src/wpa_supplicant/wpa_supplicant/wpa_gui/scanresults.ui.h
    src/wpa_supplicant/wpa_supplicant/wpa_gui/userdatarequest.ui.h
    src/wpa_supplicant/wpa_supplicant/wpa_gui/wpagui.ui.h
    src/wpa_supplicant/wpa_supplicant/wpa_gui/wpamsg.h
    src/wpa_supplicant/wpa_supplicant/wpa_gui-qt4/addinterface.cpp
    src/wpa_supplicant/wpa_supplicant/wpa_gui-qt4/addinterface.h
    src/wpa_supplicant/wpa_supplicant/wpa_gui-qt4/eventhistory.cpp
    src/wpa_supplicant/wpa_supplicant/wpa_gui-qt4/eventhistory.h
    src/wpa_supplicant/wpa_supplicant/wpa_gui-qt4/main.cpp
    src/wpa_supplicant/wpa_supplicant/wpa_gui-qt4/networkconfig.cpp
    src/wpa_supplicant/wpa_supplicant/wpa_gui-qt4/networkconfig.h
    src/wpa_supplicant/wpa_supplicant/wpa_gui-qt4/peers.cpp
    src/wpa_supplicant/wpa_supplicant/wpa_gui-qt4/peers.h
    src/wpa_supplicant/wpa_supplicant/wpa_gui-qt4/scanresults.cpp
    src/wpa_supplicant/wpa_supplicant/wpa_gui-qt4/scanresults.h
    src/wpa_supplicant/wpa_supplicant/wpa_gui-qt4/stringquery.cpp
    src/wpa_supplicant/wpa_supplicant/wpa_gui-qt4/stringquery.h
    src/wpa_supplicant/wpa_supplicant/wpa_gui-qt4/userdatarequest.cpp
    src/wpa_supplicant/wpa_supplicant/wpa_gui-qt4/userdatarequest.h
    src/wpa_supplicant/wpa_supplicant/wpa_gui-qt4/wpagui.cpp
    src/wpa_supplicant/wpa_supplicant/wpa_gui-qt4/wpagui.h
    src/wpa_supplicant/wpa_supplicant/wpa_gui-qt4/wpamsg.h
    src/wpa_supplicant/wpa_supplicant/ap.c
    src/wpa_supplicant/wpa_supplicant/ap.h
    src/wpa_supplicant/wpa_supplicant/bgscan.c
    src/wpa_supplicant/wpa_supplicant/bgscan.h
    src/wpa_supplicant/wpa_supplicant/bgscan_simple.c
    src/wpa_supplicant/wpa_supplicant/blacklist.c
    src/wpa_supplicant/wpa_supplicant/blacklist.h
    src/wpa_supplicant/wpa_supplicant/bss.c
    src/wpa_supplicant/wpa_supplicant/bss.h
    src/wpa_supplicant/wpa_supplicant/config.c
    src/wpa_supplicant/wpa_supplicant/config.h
    src/wpa_supplicant/wpa_supplicant/config_file.c
    src/wpa_supplicant/wpa_supplicant/config_none.c
    src/wpa_supplicant/wpa_supplicant/config_ssid.h
    src/wpa_supplicant/wpa_supplicant/config_winreg.c
    src/wpa_supplicant/wpa_supplicant/ctrl_iface.c
    src/wpa_supplicant/wpa_supplicant/ctrl_iface.h
    src/wpa_supplicant/wpa_supplicant/ctrl_iface_named_pipe.c
    src/wpa_supplicant/wpa_supplicant/ctrl_iface_udp.c
    src/wpa_supplicant/wpa_supplicant/ctrl_iface_unix.c
    src/wpa_supplicant/wpa_supplicant/driver_i.h
    src/wpa_supplicant/wpa_supplicant/eap_register.c
    src/wpa_supplicant/wpa_supplicant/eapol_test.c
    src/wpa_supplicant/wpa_supplicant/events.c
    src/wpa_supplicant/wpa_supplicant/ibss_rsn.c
    src/wpa_supplicant/wpa_supplicant/ibss_rsn.h
    src/wpa_supplicant/wpa_supplicant/main.c
    src/wpa_supplicant/wpa_supplicant/main_none.c
    src/wpa_supplicant/wpa_supplicant/main_symbian.cpp
    src/wpa_supplicant/wpa_supplicant/main_winmain.c
    src/wpa_supplicant/wpa_supplicant/main_winsvc.c
    src/wpa_supplicant/wpa_supplicant/mlme.c
    src/wpa_supplicant/wpa_supplicant/mlme.h
    src/wpa_supplicant/wpa_supplicant/notify.c
    src/wpa_supplicant/wpa_supplicant/notify.h
    src/wpa_supplicant/wpa_supplicant/preauth_test.c
    src/wpa_supplicant/wpa_supplicant/scan.c
    src/wpa_supplicant/wpa_supplicant/scan.h
    src/wpa_supplicant/wpa_supplicant/sme.c
    src/wpa_supplicant/wpa_supplicant/sme.h
    src/wpa_supplicant/wpa_supplicant/win_if_list.c
    src/wpa_supplicant/wpa_supplicant/wpa_cli.c
    src/wpa_supplicant/wpa_supplicant/wpa_passphrase.c
    src/wpa_supplicant/wpa_supplicant/wpa_priv.c
    src/wpa_supplicant/wpa_supplicant/wpa_supplicant.c
    src/wpa_supplicant/wpa_supplicant/wpa_supplicant_i.h
    src/wpa_supplicant/wpa_supplicant/wpas_glue.c
    src/wpa_supplicant/wpa_supplicant/wpas_glue.h
    src/wpa_supplicant/wpa_supplicant/wps_supplicant.c
    src/wpa_supplicant/wpa_supplicant/wps_supplicant.h
    src/aes.c
    src/aes.h
    src/cmac.c
    src/cmac.h
    src/eaptest.c
    src/include.h
    src/lalarm.c
    src/lalarm.h
    src/loadconfig.c
    src/loadconfig.h
    src/mainpre.c
    src/mainpre.h
    src/mainserver.cpp
    src/mainserver.h
    src/mote.cpp
    src/panamessages.c
    src/panamessages.h
    src/panautils.c
    src/panautils.h
    src/prf_plus.c
    src/prf_plus.h
    config.h)

add_executable(openpana_coap ${SOURCE_FILES})